Fixed right whitespace issue

--- a/components/headandfoot.module.css
+++ b/components/headandfoot.module.css
@@ -7,7 +7,6 @@
   }
 
 .footer {
-    position: absolute;
     width: 100%;
     height: 70px;
     margin-top: 20px;
@@ -36,7 +35,7 @@
     height: 80px;
     width: 40%;
     min-width: 400px;
-    right: -80px;
+    right: 0px;
     bottom: 0px;
     vertical-align: center;
 }
