--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    height: 100%;
+    overlow-x: hidden;
 }
 
 a {
@@ -18,12 +20,6 @@ a {
   box-sizing: border-box;
 }
 
-#__next {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  border: 2px solid green;  
-}
 
 .material-icons-outlined {
   position: relative;
